<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.europeana</groupId>
    <artifactId>europeana-parent-pom</artifactId>
    <version>2.4</version>
  </parent>

  <artifactId>keycloak-europeana</artifactId>
  <groupId>eu.europeana</groupId>
  <version>2.4-SNAPSHOT</version>

  <packaging>pom</packaging>

  <modules>
    <module>bcrypt-addon</module>
    <module>keycloak-metrics</module>
    <module>europeana-eventlistener</module>
    <module>delete-unverified-users</module>
    <module>keycloak-apikey</module>
    <module>custom-protocol-mapper</module>
    <module>sync-zoho-user</module>
    <module>register-with-captcha</module>
  </modules>

  <name>Keycloak for Europeana</name>
  <description>Keycloak customised with several add-on modules and custom encryption</description>

  <properties>
    <!-- Check this version to match the one in the Dockerfile! -->
    <keycloak.version>23.0.7</keycloak.version>

    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>

    <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
    <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
    <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
    <maven-install-plugin.version>3.1.1</maven-install-plugin.version>

    <jakarta-json.version>2.1.3</jakarta-json.version>
    <jakarta-annotationapi.version>3.0.0</jakarta-annotationapi.version>
    <jakarta.version>4.0.0</jakarta.version>

    <httpclient.version>4.5.14</httpclient.version>
    <httpcore.version>4.4.16</httpcore.version>
    <httpmime.version>4.5.14</httpmime.version>

    <snakeyaml.version>2.3</snakeyaml.version>
    <jboss.logging.version>3.5.3.Final</jboss.logging.version>
    <!--    <dependency-check-maven.version>11.1.0</dependency-check-maven.version>-->
    <dependency-check-maven.version>11.1.0</dependency-check-maven.version>

    <snakeyaml.version>2.3</snakeyaml.version>
    <lombok.version>1.18.32</lombok.version>

    <commons-lang3.version>3.14.0</commons-lang3.version>
    <commons-io.version>2.16.1</commons-io.version>
    <commons-compress.version>1.26.1</commons-compress.version>
    <commons-lang3.version>3.14.0</commons-lang3.version>
    <commons-logging.version>1.3.0</commons-logging.version>
    <commons-beanutils.version>1.9.4</commons-beanutils.version>
    <commons-text.version>1.12.0</commons-text.version>
    <commons-collections4.version>4.5.0-M1</commons-collections4.version>

    <!-- non-dependencies -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>



    <json.version>20240205</json.version>
    <!--    <mysql-connector-j.version>8.3.0</mysql-connector-j.version>-->
    <opencsv.version>5.9</opencsv.version>

  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
    <dependency>
      <groupId>jakarta.json</groupId>
      <artifactId>jakarta.json-api</artifactId>
      <version>${jakarta-json.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>${jakarta-annotationapi.version}</version>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven-clean-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven-dependency-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>${maven-install-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <!--    <plugins>-->
    <!--      &lt;!&ndash; This will be active when running the verify or install goal-->
    <!--           To skip (e.g. during debugging) use 'mvn clean package')&ndash;&gt;-->
    <!--      <plugin>-->
    <!--        <groupId>org.owasp</groupId>-->
    <!--        <artifactId>dependency-check-maven</artifactId>-->
    <!--        <version>${dependency-check-maven.version}</version>-->
    <!--        <configuration>-->
    <!--          <nvdApiKey>dc601836-6867-4367-8fee-fc1e2aaf594b</nvdApiKey>-->
    <!--          <nvdApiKeyEnvironmentVariable>NVD_APIKEY</nvdApiKeyEnvironmentVariable>-->
    <!--          &lt;!&ndash; see EA-3505 why we host the known exploited vulnerabilities file ourselves &ndash;&gt;-->
    <!--          <knownExploitedUrl>https://artifactory.eanadev.org/artifactory/ext-release-local/gov/cisa/www/known_exploited_vulnerabilities.json</knownExploitedUrl>-->
    <!--          <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>-->
    <!--          <failBuildOnCVSS>9</failBuildOnCVSS>-->
    <!--          <suppressionFiles>-->
    <!--            <suppressionFile>owasp-suppress.xml</suppressionFile>-->
    <!--          </suppressionFiles>-->
    <!--        </configuration>-->
    <!--        <executions>-->
    <!--          <execution>-->
    <!--            <goals>-->
    <!--              <goal>check</goal>-->
    <!--            </goals>-->
    <!--          </execution>-->
    <!--        </executions>-->
    <!--      </plugin>-->
    <!--    </plugins>-->
  </build>

</project>
